[package]
name = "green-tea"
version = "0.1.0"
edition = "2021"
description = "Keep your screen awake"
keywords = ["screen", "awake", "tea", "green"]
license = "MIT"
catogories = ["command-line-utilityies"]
authors = ["Owlly"]
repository = "https://gihub.com/mr-owllers/green-tea"
homepage = "https://mr-owllers.github.io/pages/green-tea.html"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.0.14"
